#updated name of the website changed

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <meta charset="UTF-8">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,300,400,600" rel="stylesheet" type="text/css">
         <script src="https://kit.fontawesome.com/a73b793f23.js" crossorigin="anonymous"></script>
+        <link rel = "icon" href = "assets/expenses.png" type = "image/x-icon">
         <link type="text/css" rel="stylesheet" href="style.css">
-        <title>Budgety</title>
+        <title>Expense Tracker</title>
     </head>
     <body>
         
